# fastapi-books-project

./: pyproject.toml
fastapi_project/: books.py  books2.py
tests/: test_fastapi_project.py
